File path change

--- a/report.yaml
+++ b/report.yaml
@@ -21,7 +21,7 @@ team:
     program: MBA
   - name: Tate Keller
     email: tak76@cornell.edu
-    picture: images/tate.jpg
+    picture: tate.jpg
     program: HT
   - name: Tim Liu
     email: 
