--- a/report.yaml
+++ b/report.yaml
@@ -1,5 +1,5 @@
-company: Milestone Studio Labs
-  name: Pentachord
+company:
+  name: Milestone Studio Labs
   logo: milestone_studio_labs.png
 product_hmw: How might we enable children and adults living with physical disabilities to make music?
 product_narrative: |
