--- a/report.yaml
+++ b/report.yaml
@@ -1,9 +1,9 @@
 company:
   name: Milestone Studio Labs
-  logo: milestone_studio_labs.png
+  logo: milestone_studio_labs.jpg
 product_hmw: How might we enable children and adults living with physical disabilities to make music?
 product_narrative: |
-  Coming soon.
+  More information coming soon!
 team:
   picture: team.jpg
   roster:
