--- a/report.yaml
+++ b/report.yaml
@@ -31,4 +31,4 @@ assets:
 - title: Sprint 1
   url: https://drive.google.com/file/d/15uu9AodmrqHBL1YDc55M1o4z3A8Kt96Q/view?usp=sharing
 - title: Sprint 2
-  url: 
+  url: https://drive.google.com/open?id=1uFSGxmJ6-5JJ8Zx3WbDLgLSpJRdDwWOOmEl4VIAr4Pw
